[gd_scene load_steps=5 format=3 uid="uid://cfxdils72sliv"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu/map_panel.gd" id="1_hxaa6"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="2_0wf6f"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="2_usos2"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="4_xe805"]

[node name="MapPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxaa6")

[node name="MapPanelLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.5
offset_top = 19.0
offset_right = 236.5
offset_bottom = 69.0
grow_horizontal = 2
theme = ExtResource("2_0wf6f")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Map[/center]"
fit_content = true

[node name="MapSpritesControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 72.0
offset_right = -128.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocationsControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 528.0
offset_right = -128.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LocationsControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="AllButton" parent="LocationsControl/HBoxContainer" instance=ExtResource("2_usos2")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../LocationsButton")
text = "All"

[node name="LocationsButton" parent="LocationsControl/HBoxContainer" instance=ExtResource("2_usos2")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../AllButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../QuestsButton")
text = "Locations"

[node name="QuestsButton" parent="LocationsControl/HBoxContainer" instance=ExtResource("2_usos2")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../LocationsButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
text = "Quests"

[node name="ScrollContainer" type="ScrollContainer" parent="LocationsControl" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 0
script = ExtResource("4_xe805")
boxContainer = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="LocationsControl/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" parent="." instance=ExtResource("2_usos2")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -64.0
offset_right = 40.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
